refine index.html

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,30 @@
 	<meta charset="UTF-8" />
 	<title>書法資料庫</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<script type="module" src="./index.js"></script>
 </head><body>
-	<h1>書法資料庫</h1>
+	<header>
+		<h1>書法資料庫</h1>
+		<div id="menu">
+			<a href="#">連結一</a>
+			<a href="#">連結二</a>
+			<a href="#">連結三</a>
+		</div>
+	</header>
+	<main>
+		<h2>搜尋</h2>
+		<form id="search">
+			<fieldset id="searchDatabases">
+				<legend>選擇資料庫</legend>
+			</fieldset>
+			<input type="text" name="chars" placeholder="請輸入欲查詢的文字" />
+		</form>
+		<div id="searchResults">
+			輸入後，請按「搜尋」鍵。
+		</div>
+	</main>
+	<footer>
+		版權所有 blahblahblah。
+		建議使用最新版瀏覽器訪問本網站。
+	</footer>
 </body></html>
