--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="書法資料庫" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<script type="module" src="./index.js"></script>
-	<script type="module" src="../basicPage/main.js"></script>
+	<script type="module" src="./basicPage/main.js"></script>
 	<style> @import "./index.css" ; </style>
 </head><body>
 	<main>
